# HyprHopper

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: hopper-capture.sh  hopper-waybar.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  theme.rs  windows.rs
src/components/: ItemCard.tsx  PreviewModal.tsx  PriorityBadge.tsx  TagChip.tsx
src/hooks/: useItems.ts  useTheme.ts
src/lib/: time.ts
src/styles/: globals.css
src/types/: item.ts
src/windows/: Capture.tsx  Feed.tsx
